# SSAPy-Toolkit

./: .flake8  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Module_testing.ipynb  NOTICE  README.md  eclipse_brightness_plot.py  license.txt  math.py  plotting.py  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py  setup_tle_credentials.py  tle_updater.py  toolkit_gui.py
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  docs.yml  gallery.yml  publish.yml  repository-policy.yml
core/: __init__.py  accel_thrust.py  base_plot.py  frames.py  layers.py  orbit_state.py  satellite.py  sun.py  sun_mpl.py  sun_render.py
demos/: README.md  Transfer_Hohmann.py  Transfer_Lambertian.py  _Run_ALL.py  __init__.py  bounding_contours.py  building_new.py  building_new2.py  demo_all_orbit_quantities.py  demo_artemis_benchmark.py  demo_build_dashboard.py  demo_compare_models.py  demo_converting_impulse_and_burns.py  demo_data_package_access.py  demo_divergence_plot.py  demo_ellipse_ae_for_arrival_rv.py  demo_ellipse_fit.py  demo_ellipse_fit_against_ssapy.py  demo_ellipse_from_rv.py  demo_ellipse_from_rv_transfer.py  demo_ellipses.py  demo_ellipses_rebound.py  demo_equally_spaced_ta.py  demo_fancy_video.py  demo_gamma_and_heading.py  demo_gcrf_to_latlon.py  demo_gcrs_to_itrs_astropy.py  demo_get_times.py  demo_gifify.py  demo_globe_plot.py  demo_groundtrack_accuracy.py  demo_groundtrack_plot.py  demo_itrf_to_gcrf.py  demo_kepler_vs_harmonics.py  demo_lambertian_brightness.py  demo_leapfrog.py  demo_moon_plot.py  demo_ntw_and_gcrf.py  demo_orbit_plot.py  demo_orbital_stats_dashboard.py  (+97 more)
docs/: api.rst  conf.py  index.rst  requirements.txt  usage.rst
scripts/: check_repository_policy.py  generic_hpc_submission.sh
ssapy_toolkit/: __init__.py  constants.py  data.py  demo_gallery.py  orbit_initializer.py  run_all_demos.py  utils.py  vectors.py
ssapy_toolkit/Accelerations/: __init__.py  accel_circularize.py  accel_earth_harmonics.py  accel_equitorial.py  accel_inclination.py  accel_moon.py  accel_plane.py  accel_radial.py  accel_sun.py  accel_uniform_earth.py
ssapy_toolkit/Compute/: calculate_errors.py  find_bounding_cube.py  mengos.py  sampling.py
ssapy_toolkit/Coordinates/: cartesian_to_spherical.py  equitorial_and_ecliptic.py  gcrf_to_itrf.py  gcrf_to_llh.py  gcrf_to_lonlat.py  gcrf_to_lunar.py  itrf_to_gcrf.py  j2000_to_gcrf.py  local_and_equitorial.py  lon_lat_bbox.py  lonlat_perigee.py  lunar_position.py  on_sky_distance.py  v_from_r.py
ssapy_toolkit/IO/: converter_json_hdf5.py  dict_to_from_hdf5.py  hdf5_to_csv.py  hdf5_utils.py  listfiles.py  pprint_utils.py  read_3le.py  tle_prop_to_time.py  workspace_io.py
ssapy_toolkit/Integrators/: __init__.py  int_utils.py  leap_frog.py  quick_int.py
ssapy_toolkit/Orbital_Mechanics/: __init__.py  all_orbit_quanities.py  burn_to_deltav.py  calculate_finite_burn_acceleration.py  deltav_to_burn.py  ellipse_fit.py  equally_spaced_ta.py  gamma_and_heading.py  keplerian.py  lagrange_points.py  orbital_accel_model_comparisons.py  orbital_comparison_stats.py  synthetic_orbit_population.py  transfer_inclination_continuous.py  transfer_shooter.py  transfer_velocity_and_inclination_continuous.py
ssapy_toolkit/Plots/: __init__.py  divergence_gif.py  divergence_plot.py  figpath.py  gifify.py  groundtrack_dashboard_gamma_heading.py  groundtrack_video.py  misc_plotting.py  orbit_plot.py  orbit_plot_rv.py  orbit_plot_xyxz.py  plotutils.py  rendezvous_plot.py  set_axes_equal.py  transfer_plot.py  write_gifs.py  write_videos.py
ssapy_toolkit/SSAPy_wrappers/: accel_ladder.py  ssapy_orbits.py
ssapy_toolkit/Time_Functions/: __init__.py  absolute_times_to_relative.py  convert_dd_and_dms.py  convert_gps_to_TT.py  get_times.py  relative_times_to_absolute.py
ssapy_toolkit/Yastropy/: __init__.py  astropy_surface_rv.py  astropy_test.py
ssapy_toolkit/accelerations/: accel_add.py  accel_circularize.py  accel_earth_harmonics.py  accel_inclination.py  accel_moon.py  accel_plane.py  accel_sun.py  accel_uniform_earth.py
ssapy_toolkit/compute/: __init__.py  generate_sphere_of_vectors.py  lambertian_magnitude.py  lyapunov_exponent.py  sampling.py  segment_intersection.py
ssapy_toolkit/coordinates/: earth_trojan_sim.py  gcrf_to_itrf.py  gcrf_to_lonlat.py  gcrf_to_lunar.py  gcrf_to_ntw.py  itrf_to_gcrf.py  local_and_equitorial.py  lonlat_perigee.py  lunar_position.py  ntw_to_gcrf.py  sky_angles.py  surface_rv.py  v_from_r.py
ssapy_toolkit/integrators/: gravity_turn.py  int_utils.py  leap_frog.py  quick_int.py  rk4.py
ssapy_toolkit/io/: csv_utils.py  dict_to_from_hdf5.py  guess_delimiter.py  hdf5_utils.py  html_to_gif.py  read_3le_by_bit.py  tle_iter_pairs.py  xml_utils.py  yudata.py
ssapy_toolkit/orbital_mechanics/: all_orbit_quanities.py  burn_to_deltav.py  deltav_to_burn.py  ellipse_fit.py  ellipse_from_rv.py  gamma_and_heading.py  keplerian.py  lagrange_points.py  orbital_accel_model_comparisons.py  transfer_coplanar.py  transfer_coplanar_continuous.py  transfer_hohmann.py  transfer_inclination_continuous.py  transfer_lambertian.py  transfer_optimal_function.py  transfer_rendezvous.py  transfer_shooter.py  transfer_ssapy_function.py
ssapy_toolkit/plots/: __init__.py  artemis1_full_mission.py  artemis1_ssapy_divergence.py  break_plot_lines.py  build_dashboard.py  cislunar_plot.py  cislunar_plot_3d.py  divergence_gif.py  divergence_plot.py  earth_map.npz  earth_sun_plot.py  (+32 more)
tests/: bounding_contours_3d.py  run_tests.py  test_compute.py  test_coordinates.py  test_data_access.py  test_demos_easy.py  test_demos_heavy.py  test_hpc.py  test_io.py  test_plots.py  test_time.py  test_utils.py  test_vectors.py
yeager-utils/: __init__.py  hpc.py  orbit_initializer.py  utils.py  vectors.py
yeager_utils/: __init__.py  accessing_cislunar_data.py  asteroids.py  compute.py  constants.py  coordinates.py  engines.py  globe_plot.py  hpc.py  integrator.py  io.py  launch_pads.py  orbit_initializer.py  orbital_mechanics.py  plotting.py  ssapy_wrapper.py  test.py  time.py  utils.py  vectors.py
(+189 files in other folders)
